--- a/css/main.css
+++ b/css/main.css
@@ -826,7 +826,7 @@ input {
 	width: 620px;
 	height: 347px;
 	background-size: cover;
-	margin-left: 270px;
+	margin-left: 320px;
 	margin-top: 10px;
 	box-sizing: border-box;
 }
@@ -869,6 +869,7 @@ input {
 	height: 120px;
 	background-color: #000000;
 	float: left;
+	box-sizing: border-box;
 }
 .footer1{
 	width: 284px;
@@ -880,7 +881,7 @@ input {
 	float: left;
 }
 .footer2{
-	width: 640px;
+	width: 720px;
 	height:120px;
 	background-image: url( "../images/footer-pattern-3.1.png");
 	float: left;
@@ -889,10 +890,11 @@ input {
 	background-size: cover;
 }
 .footer3{
-	width:674px;
+	width:686px;
 	height: 120px;
 	background-image: url("../images/Pattern-Footer-3.png");
 	float: left;
+	box-sizing: border-box;
 }
 .footerlogo{
 	width: 25px;
