--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
 	margin: 0;
 	height: 100px;
 }
-.main{
+.lonnhat{
 	width: 100%;
 	height: auto;
 	background-image: url("../images/Main-Pattern-BG.png");
